--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,30 @@
 {
-  "name": "Caderneta",
+  "name": "Caderneta - Fiado Digital",
   "short_name": "Caderneta",
   "description": "Organize seu fiado digital",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#F1F1EF",
-  "theme_color": "#F1F1EF",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "narrow"
     }
   ]
 }
